ActionCandidates in menubar